# tpc_c_cplusplus

./: Cross-Compilation Guide for Open-Source Third-Party Libraries in OpenHarmony.md  Cross_Compilation_Guide_for_Open_Source_Third_Party_Libraries_in_OpenHarmony_en.md  OAT.xml  README_zh.md
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
.gitee/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
bsdiff/: BUILD.gn  README.OpenSource  README_zh.md
bsdiff/docs/: rom_integrate.md
bsdiff/testdata/: note.txt
community/CUnit/: HPKBUILD  README_zh.md  SHA512SUM
community/Catch2/: HPKBUILD  HPKCHECK  README.OpenSource  SHA512SUM
community/DLib/: HPKBUILD
community/FFmpeg-ff4.0/: README_zh.md
community/GKlib/: README.OpenSource
community/GmSSL-v1/: HPKBUILD  HPKCHECK
community/ImageMagick_7_1_1_35/: HPKBUILD  HPKCHECK  OAT.xml  README.OpenSource  SHA512SUM
community/InferLLM/: HPKBUILD
community/LuaJIT/: HPKBUILD  SHA512SUM
community/OpenBLAS/: HPKBUILD
community/OpenBLAS_0.3.23/: HPKBUILD  SHA512SUM
community/Paddle-Lite-2.7/: README_zh.md
community/SQLiteCpp-3.2.1/: README.OpenSource  README_zh.md  SHA512SUM
community/World-1.0.0/: HPKBUILD  HPKCHECK  README.OpenSource  World-1.0.0_oh_pkg.patch
community/agg/: HPKBUILD
community/alsa-lib/: README_zh.md
community/avro/: HPKBUILD  README_zh.md
community/avrocpp/: HPKBUILD  README_zh.md
community/bdwgc-8.0.0/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM  bdwgc-8.0.0_oh_pkg.patch
community/behaviortree/: README_zh.md
community/boost/: HPKBUILD  README.OpenSource
community/bullet3-3.22/: README.OpenSource  README_zh.md  bullet3-3.22_oh_pkg.patch
community/busybox/: README.OpenSource
community/bzip2_1_0_8/: HPKBUILD
community/cJSON/: README.OpenSource  README_zh.md
community/capstone/: HPKBUILD
community/check/: HPKBUILD
community/cppcodec-0.1/: HPKBUILD  SHA512SUM  cppcodec-0.1_oh_pkg.patch
community/cppzmq/: HPKCHECK  OAT.xml  README.OpenSource  README_zh.md
community/cronet/: README.OpenSource  README_zh.md  angle_COMMIT_bbf57e6db_oh_pkg.patch  dawn_COMMIT_6ab02659de_oh_pkg.patch
community/curl_8_9_0/: README.OpenSource  README_zh.md  curl_oh_pkg.patch
community/curl_8_9_1/: HPKBUILD  HPKCHECK  README.OpenSource  SHA512SUM
community/draco/: HPKBUILD  HPKCHECK  README.OpenSource  SHA512SUM
community/eigen/: HPKBUILD
community/erlang-libdecaf/: HPKBUILD
community/espeak/: HPKBUILD
community/flac/: HPKBUILD
community/fmt-8.1.1/: HPKBUILD  README_zh.md
community/fontconfig/: README_zh.md
community/friso/: HPKBUILD  SHA512SUM
community/gdbm/: HPKBUILD
community/gettext/: HPKBUILD
community/glib/: HPKBUILD
community/googletest_1.11.0/: HPKBUILD
community/jbig2enc/: README.OpenSource  README_zh.md
community/json/: HPKBUILD  README_zh.md
community/json-c/: HPKBUILD  README_zh.md
community/json-c_0_17_20230812/: HPKCHECK  SHA512SUM
community/json11-1.0.0/: README_zh.md  SHA512SUM  json11-1.0.0_oh_pkg.patch
community/kcp-1.7/: HPKCHECK  README.OpenSource
community/libaom/: HPKBUILD
community/libatomic_ops/: HPKBUILD
community/libdeflate/: HPKBUILD
community/libdivsufsort/: README.OpenSource
community/libelf/: HPKBUILD
community/libiconv/: README.OpenSource
community/libiec61850/: HPKBUILD  README.OpenSource  SHA512SUM
community/libmill/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM  libmill_oh_pkg.patch
community/libmnl/: HPKBUILD
community/libosip2/: README_zh.md
community/libpcap/: HPKBUILD  README.OpenSource
community/libsamplerate-0.2.2/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM
community/libsecret/: 0001-secret-password.patch  HPKBUILD  arm64-v8a-cross-file.txt
community/libsndfile/: HPKBUILD
community/libtiff/: HPKBUILD  README_zh.md
community/libtool/: HPKBUILD
community/libucl/: HPKCHECK  README.OpenSource  README_zh.md  SHA512SUM
community/libuv/: HPKBUILD  SHA512SUM
community/libwebsockets/: HPKCHECK
community/libzmq/: HPKBUILD  libzmq_oh_pkg.patch
community/linux-pam/: HPKBUILD  README.OpenSource
community/log4z-3.4.0/: HPKBUILD  README_zh.md  SHA512SUM
community/lua/: HPKBUILD  README_zh.md
community/massdns/: HPKBUILD  README.OpenSource  README_zh.md  SHA512SUM  massdns-1.1.0_oh_pkg.patch
community/mbedtls-polarssl-1.1.3/: HPKBUILD  HPKCHECK  README_zh.md
community/mbedtls_2_4_2/: HPKBUILD
community/meshoptimizer-0.19/: README.OpenSource  SHA512SUM  (+2 more)
concurrentqueue/: README.OpenSource
docs/: FAQ.md  FFmpegFAQ.md  MacFAQ.md  adapter_mac.md  adapter_thirdlib.md  adapter_thirdlib_create_cmake.md  adapter_thirdlib_reconfiguration_cmake.md  adapter_thirdlib_with_cmake.md  adapter_thirdlib_with_ide.md  adapter_windows.md  adpater_architecture.md  app_call_thirdlib_hap.md  cmake_compile.md  cmake_portting.md  configure_portting.md  constraint.md  emulator_verification.md  hap.md  hap_build.md  hap_integrate_environment.md  hap_use_library.md  hello_napi.md  ide_findpackage_problem.md  make_portting.md  napi_asynchronous_call.md  napi_data_type.md  napi_export_object.md  napi_life_cycle.md  openssl_use_in_openharnmony.md  rom_hap_c_cpluplus_diff.md  test_hap.md  thirdparty_knowledge.md  thirdparty_list.md  thirdparty_port.md
jbig2enc/: BUILD.gn  README_zh.md
leptonica/: BUILD.gn  README.OpenSource  bundle.json
libmp3lame/: BUILD.gn  README_zh.md
libtiff/: BUILD.gn  README_zh.md
libtiff/adapted/: tif_config.h
libtiff/docs/: rom_integrate.md
lycium/: README.md  build.sh  test.sh
lzma/: README_zh.md
minizip-ng/: BUILD.gn  README.OpenSource  README_zh.md
modbus/: BUILD.gn  README_zh.md  bundle.json
modbus/adapted/src/: config.h  modbus-version.h
modbus/adapted/tests/: unit-test.h
modbus/docs/: rom_integrate.md
mqtt/: BUILD.gn  README_zh.md  bundle.json
mqtt/adapted/src/samples/: BUILD.gn
mqtt/docs/: rom_integrate.md
openjpeg/: README.OpenSource
rapidjson/: README_zh.md
tinyxml2/: BUILD.gn  README_zh.md
tools/: README.md  build.sh
unrar/: README.OpenSource  README_zh.md
xerces-c/: README.OpenSource  README_zh.md
(+171 files in other folders)
