# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


import("//build/ohos.gni")

declare_args() {
   enable_libtiff_test = false
}

config("libtiff_config"){
    include_dirs = [
        "libtiff/libtiff/libtiff",
        "//third_party/libjpeg",
        "//third_party/zlib",
        "adapted"
    ]
}

ohos_shared_library("libtiff_shared") {
    sources = [
        "libtiff/libtiff/tif_aux.c",
        "libtiff/libtiff/tif_close.c",
        "libtiff/libtiff/tif_codec.c",
        "libtiff/libtiff/tif_color.c",
        "libtiff/libtiff/tif_compress.c",
        "libtiff/libtiff/tif_dir.c",
        "libtiff/libtiff/tif_dirinfo.c",
        "libtiff/libtiff/tif_dirread.c",
        "libtiff/libtiff/tif_dirwrite.c",
        "libtiff/libtiff/tif_dumpmode.c",
        "libtiff/libtiff/tif_error.c",
        "libtiff/libtiff/tif_extension.c",
        "libtiff/libtiff/tif_fax3.c",
        "libtiff/libtiff/tif_fax3sm.c",
        "libtiff/libtiff/tif_flush.c",
        "libtiff/libtiff/tif_getimage.c",
        "libtiff/libtiff/tif_jbig.c",
        "libtiff/libtiff/tif_jpeg.c",
        "libtiff/libtiff/tif_jpeg_12.c",
        "libtiff/libtiff/tif_lerc.c",
        "libtiff/libtiff/tif_luv.c",
        "libtiff/libtiff/tif_lzma.c",
        "libtiff/libtiff/tif_lzw.c",
        "libtiff/libtiff/tif_next.c",
        "libtiff/libtiff/tif_ojpeg.c",
        "libtiff/libtiff/tif_open.c",
        "libtiff/libtiff/tif_packbits.c",
        "libtiff/libtiff/tif_pixarlog.c",
        "libtiff/libtiff/tif_predict.c",
        "libtiff/libtiff/tif_print.c",
        "libtiff/libtiff/tif_read.c",
        "libtiff/libtiff/tif_strip.c",
        "libtiff/libtiff/tif_swab.c",
        "libtiff/libtiff/tif_thunder.c",
        "libtiff/libtiff/tif_tile.c",
        "libtiff/libtiff/tif_version.c",
        "libtiff/libtiff/tif_warning.c",
        "libtiff/libtiff/tif_webp.c",
        "libtiff/libtiff/tif_write.c",
        "libtiff/libtiff/tif_zip.c",
        "libtiff/libtiff/tif_zstd.c",
        "libtiff/libtiff/tif_unix.c",
    ]
    configs = [ ":libtiff_config" ]
    deps = [
        "//third_party/zlib:libz",
        "//third_party/libjpeg:libjpeg_static",
    ]
    part_name = "libtiff"
}

config("test_config") {
    include_dirs = [
        "libtiff/tools",
        "libtiff/libtiff",
        "libtiff/port",
        "adapted"
    ]
    
    cflags_cc = [
    
    ]
}
ohos_executable("fax2ps"){
    sources = [
        "libtiff/tools/fax2ps.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("fax2tiff"){
    sources = [
        "libtiff/tools/fax2tiff.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("pal2rgb"){
    sources = [
        "libtiff/tools/pal2rgb.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("ppm2tiff"){
    sources = [
        "libtiff/tools/ppm2tiff.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("raw2tiff"){
    sources = [
        "libtiff/tools/raw2tiff.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("rgb2ycbcr"){
    sources = [
        "libtiff/tools/rgb2ycbcr.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("thumbnail"){
    sources = [
        "libtiff/tools/thumbnail.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiff2bw"){
    sources = [
        "libtiff/tools/tiff2bw.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiff2pdf"){
    sources = [
        "libtiff/tools/tiff2pdf.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiff2ps"){
    sources = [
        "libtiff/tools/tiff2ps.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiff2rgba"){
    sources = [
        "libtiff/tools/tiff2rgba.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiffcmp"){
    sources = [
        "libtiff/tools/tiffcmp.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiffcp"){
    sources = [
        "libtiff/tools/tiffcp.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiffcrop"){
    sources = [
        "libtiff/tools/tiffcrop.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiffdither"){
    sources = [
        "libtiff/tools/tiffdither.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiffdump"){
    sources = [
        "libtiff/tools/tiffdump.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiffinfo"){
    sources = [
        "libtiff/tools/tiffinfo.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiffmedian"){
    sources = [
        "libtiff/tools/tiffmedian.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiffset"){
    sources = [
        "libtiff/tools/tiffset.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

ohos_executable("tiffsplit"){
    sources = [
        "libtiff/tools/tiffsplit.c",
    ]
    
    configs = [
        ":test_config",
    ]
    
    deps = [
        ":libtiff_shared",
    ]
    
    part_name = "libtiff"
}

group("libtiff") {
    deps = [
        ":libtiff_shared"
    ]
    
    if (enable_libtiff_test) {
            deps += [
            ":fax2ps",
            ":fax2tiff",
            ":pal2rgb",
            ":ppm2tiff",
            ":raw2tiff",
            ":rgb2ycbcr",
            ":thumbnail",
            ":tiff2bw",
            ":tiff2pdf",
            ":tiff2ps",
            ":tiff2rgba",
            ":tiffcmp",
            ":tiffcp",
            ":tiffcrop",
            ":tiffdither",
            ":tiffdump",
            ":tiffinfo",
            ":tiffmedian",
            ":tiffset",
            ":tiffsplit"
        ]
    }
}